# Yandex_Practicum_DL_Engineer_2026_stream4

./: .gitignore  README.md  gensim_requirements.txt  pyproject.toml  stream4_handson_project.ipynb
cfg/: best_model.pt  best_model_dl.pt
lessons_notebooks/: 01_tokenizers.ipynb  02_stemming_n_lemming.ipynb  03_TF-IDF_from_sklearn.ipynb  04_TF-IDF_pipeline.ipynb  05_Word2Vec_intro.ipynb  06_FastText_intro.ipynb  07_cv2_vs_pillow.ipynb  08_timm_intro.ipynb  09_albumentations.ipynb  10_audio_librosa.ipynb  11_finding_invalid_photos.ipynb  12_multimodal_dataprep.ipynb  13_multimodal_models.ipynb
scripts/: dataset.py  nlp_feature_extraction.py  utils.py
