[project]
name = "yadle-gensim-vscode-stream-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.19"
dependencies = [
    "albumentations>=2.0.8",
    "asttokens==3.0.0",
    "click>=8.4.2",
    "comm==0.2.2",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "exceptiongroup==1.3.0",
    "executing==2.2.0",
    "gensim==4.3.3",
    "ipykernel==6.29.5",
    "ipython==8.37.0",
    "jedi==0.19.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.9",
    "matplotlib-inline==0.1.7",
    "nest-asyncio==1.6.0",
    "nltk>=3.9.4",
    "numpy==1.26.4",
    "opencv-python>=4.11.0.86",
    "packaging==25.0",
    "pandas>=2.3.3",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow>=12.2.0",
    "platformdirs==4.3.8",
    "prompt-toolkit==3.0.51",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygments==2.19.2",
    "pymorphy3>=2.0.6",
    "python-dateutil==2.9.0.post0",
    "pyzmq==27.0.0",
    "scikit-learn>=1.7.2",
    "scipy==1.13.1",
    "six==1.17.0",
    "smart-open==7.1.0",
    "spacy>=3.8.14",
    "stack-data==0.6.3",
    "timm>=1.0.27",
    "tornado==6.5.1",
    "traitlets==5.14.3",
    "transformers>=5.12.1",
    "typing-extensions==4.14.0",
    "wcwidth==0.2.13",
    "wrapt==1.17.2",
]
